[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_joggler"

requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT License"}
description = "Multi-agent Path Planning environment with online task assignment"
authors = [{name = "Sergei Zobov"}]
maintainers = [{name = "Sergei Zobov"}]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}


[tool.pip-tools]
generate-hashes = true

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = ""
testpaths = [
    "tests",
]
pythonpath = "."
