[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_joggler"

requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache 2.0 License"}
description = "Multi-agent Path Planning environment with online task assignment"
authors = [{name = "Sergei Zobov"}]
maintainers = [{name = "Sergei Zobov"}]
dynamic = ["version"]

dependencies = [
    "numpy",
    "rich",
    "structlog",
    "colorama",
    "pygame",
    "platformdirs",
    "pyzmq",
    "dataclasses_avroschema",
    "websockets",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-sugar",
]

dev = [
    "pre-commit",
    "pyright",
    "ruff",
]


[tool.pip-tools]
generate-hashes = true

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = ""
testpaths = [
    "tests",
]
pythonpath = "."

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
